Fix text wrap; container width.

--- a/dark.scss
+++ b/dark.scss
@@ -7,11 +7,11 @@
  * Style variables
  */
 $base-font-family:     monospace !default;
-$base-font-size:       17px !default;
-$mobile-font-size:     17px !default;
+$base-font-size:       16px !default;
+$mobile-font-size:     16px !default;
 $base-line-height:     1.5 !default;
 $container-width:      90% !default;
-$container-max-width:  650px !default;
+$container-max-width:  700px !default;
 
 $base-color:           #DBDBDB !default;
 $primary-color:        #a1fc8f !default;
@@ -64,6 +64,7 @@ footer { margin-bottom: 20px; }
 /**
  * Lists
  */
+:not(.menu) > ul { text-wrap: nowrap; }
 :not(.menu) > ul { list-style: none;  padding-left: 0; }
 :not(.menu) > ul { list-style-type: none; }
 :not(.menu) > ul > li:before { content: "-";  margin-right: 9px; }
